objects/FHAD_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Sibling__c</fullName>
        <description>Additional Sibling(s):</description>
        <label>FHAD_v1.0.9</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Siblings__c</fullName>
        <description>Additional Sibling(s):</description>
        <label>FHAD_v1.0.10</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brother__c</fullName>
        <description>Brother:</description>
        <label>FHAD_v1.0.8</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>FHAD_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Could_you_indicate_the_number_of_APOE_E4__c</fullName>
        <description>Could you indicate the number of APOE E4 alleles you carry in your genome? This is indicated in your 23andMe report.</description>
        <label>FHAD_v1.0.13</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_a_first_degree_relative_that__c</fullName>
        <description>Have any of your first-degree relatives (a first-degree relative is defined as your biological mother, father, or siblings) been diagnosed with Alzheimer’s disease?</description>
        <label>FHAD_v1.0.2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_any_second_degree_relatives__c</fullName>
        <description>Do you have any second-degree relatives (grandparents, grandchildren, aunts, uncles, nephews, nieces, or half-siblings) that have been diagnosed with Alzheimer’s disease?</description>
        <label>FHAD_v1.0.11</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Father__c</fullName>
        <description>Father:</description>
        <label>FHAD_v1.0.6</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_any_of_your_blood_relatives_been__c</fullName>
        <description>Have any of your biological relatives been diagnosed with Alzheimer’s disease?</description>
        <label>FHAD_v1.0.1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_had_your_DNA_analyzed_by__c</fullName>
        <description>Have you had your DNA analyzed by 23andMe?</description>
        <label>FHAD_v1.0.12</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_you_have_a_first_degree_relative_that__c</fullName>
        <description>If you have a first-degree relative (defined as your mother, father, or biological siblings) that was diagnosed with Alzheimer’s disease at any age, what age were they diagnosed? Please check the box below and then enter their approximate age when they were diagnosed.</description>
        <label>FHAD_v1.0.4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mother__c</fullName>
        <description>Mother:</description>
        <label>FHAD_v1.0.5</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sister__c</fullName>
        <description>Sister:</description>
        <label>FHAD_v1.0.7</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Was_your_first_degree_relative_diagnosed__c</fullName>
        <description>Was your first-degree relative diagnosed with Alzheimer’s disease before the age of 55?</description>
        <label>FHAD_v1.0.3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>FHAD</label>
    <nameField>
        <displayFormat>FHAD-{0000000000}</displayFormat>
        <label>FHAD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FHADs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>